--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,13 @@ body {
     font-family: 'Arial';
     font-size: 13px;
 }
+#disconnected,
+#loggedOut,
+#selectRoom,
+#inRoom
+ {
+    display: none;
+}
 
 #connecting {
     text-align:center; 
